--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 
 .avatar img{
     width: 120px;
-    height: 12px;
-    
+    height: 100px;
+    border-radius: 100%;
+    border: 4px solid #444;
+    margin: 2px;
+    padding: 23px;
+
 }
